--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "gatsby": "^2.15.36",
+    "gatsby-source-filesystem": "^2.1.31",
+    "gatsby-transformer-yaml": "^2.2.13",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   },
